fix: fixed incorrect position on safari

--- a/index.css
+++ b/index.css
@@ -134,7 +134,8 @@ p {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  height: 100%;
+  height: 720px;
+  position: relative;
 }
 
 
@@ -144,11 +145,10 @@ p {
 }
 
 .main__content p {
-
   width: 305px;
   position: absolute;
-  right: 13%;
   bottom: 80px;
+  right: 13%;
   color: white
 }
 
